# CAN_commincation

./: CMakeLists.txt  README.md  canmessage.cpp  canmessage.h  canreceiver.cpp  canreceiver.h  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  photo.qrc  proj.qrc  receiverwindow.cpp  receiverwindow.h  receiverwindow.ui  senderwindow.cpp  senderwindow.h  senderwindow.ui
